# Projects_CA

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  README2.md  README3.md  auto_parts_sample.csv  build.sh  docker-compose.yml  full_backup.sql  test_bd.py
client/: .gitignore  database.py  main.py  mainwindow.cpp  mainwindow.h  models.py  requirements.txt
client/.qtcreator/: mainwindow2.pro.user.4e76f82
client/controllers/: __init__.py  part_controller.py
client/pages/: shop1.html  shop2.html
client/utils/: __init__.py  algorithms.py  drom_parser.py  image_disk_cache.py  platform.py  theme.py
client/views/: __init__.py  card_view.py  dialogs.py  main_window.py
client/workers/: data_worker.py  update_worker.py
database/: .env.example  .gitignore  BD_dead_kolesa_kz.sql  README.md  README4.md  SYNC_README.md  add_lexus_parts.py  apply_migrations.sh  auto_parts_sample.csv  dataset.py  db_manifest.json  docker-compose.yml  full_backup.sql  full_backup_utf8.sql  sync_pull.sh  sync_push.sh  sync_status.sh  test.py  test_bd.py  test_db.py
database/migrations/: 001_add_shop_url_column.sql
neon/: Makefile  app  gui.cpp  main.cpp  neon.cpp  neon.hpp  neon_test.cpp  neon_test.hpp
neon_2/: CMakeLists.txt  Makefile
neon_2/src/: ARMNEON.cpp  ARMNEON_imgui.cpp
src/: ARMNEON.cpp  ARMNEON_imgui.cpp  main.cpp  neon_lab.cpp  neon_lab.h
